add auth routes register,login,logout,refreshToken, wp users routes
